# convocacao-cliente

./: .gitignore  GUIA.md  package-lock.json  package.json
.github/workflows/: build-macos.yml  release.yml
src/: alerta.html  cadastro.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
