[package]
name = "convocacao-cliente"
version = "1.0.1"
description = "Cliente de convocacao"
authors = ["rony"]
edition = "2021"

[lib]
name = "convocacao_cliente_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Limita o time a versoes compativeis com cookie 0.18 (0.3.49+ quebra a compilacao).
time = ">=0.3.20, <0.3.49"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
