[package]
name = "convocacao-cliente"
version = "1.0.5"
description = "Cliente de convocacao"
authors = ["rony"]
edition = "2021"

[lib]
name = "convocacao_cliente_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Limita o time a versoes compativeis com cookie 0.18 (0.3.49+ quebra a compilacao).
time = ">=0.3.20, <0.3.49"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
